feat: JFP-63 add pet list endpoint
